2007-08-06  Sébastien Sablé  <sable@users.sourceforge.net>

	* Added support for python Decimal objects in databuf

	* Sybase.py: Using ct_cursor for select requests

2007-07-30  Sébastien Sablé  <sable@users.sourceforge.net>

	* doc/ctxobj.tex, doc/localeobj.tex: Corrected documentation about
	CS_CONTEXT Objects thanks to bug report by Derek Harland (close
	tracker 1748109)

	* Sybase.py: Corrected bug in close() if connection killed from
	outside thanks to patch by Derek Harland (close tracker 1746220)

	* Sybase.py: Corrected bug if inherit from Sybase.Connection
	thanks to patch by Derek Harland (close tracker 1719789)

	* Sybase.py: Optimization in fetchall - using fetchmany instead of
	fetchone to avoid locking time penalty, thanks to patch by Derek
	Harland (close tracker 1746908)

	* freetds.h, setup.py: Corrections to compile with bcp-support
	against freetds thanks to patch by Klaus-Martin Hansche (close
	tracker 1724088)

	* MANIFEST.in: Added test suites to distribution

2007-07-23  Sébastien Sablé  <sable@users.sourceforge.net>

	* Better compliance with DBAPI: returns None in nextset when no
	more set

2007-05-22  Sébastien Sablé  <sable@users.sourceforge.net>

	* Add metadata for pypi

2007-05-15  Sébastien Sablé  <sable@users.sourceforge.net>

	* doc/installation.tex: Corrected documentation to compile with
	FreeTDS and Threads thanks to Derek Harland (close tracker
	1709043)

2007-02-28  Sébastien Sablé  <sable@users.sourceforge.net>

	* Added conversion from string to int when assigning to a
	CS_INT_TYPE DataBuf

	* Simplified API for CS_DATE_TYPE related functions

	* databuf.c: Corrected bug in databuf_alloc: Sybase reports the
	wrong maxlength for numeric type - verified with Sybase 12.5 -
	thanks to patch provided by Phil Porter

2007-02-26  Sébastien Sablé  <sable@users.sourceforge.net>

	* Added support for CS_DATE_TYPE

2007-05-03  Sébastien Sablé  <sable@users.sourceforge.net>

        * Releasing version 0.38
